--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,12 @@ button {
   border: none;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 .accent {
   color: var(--accent-color);
 }
@@ -63,7 +69,7 @@ button {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-  outline: 2px solid tomato;
+  /* outline: 2px solid tomato; */
 }
 .section {
   padding-top: 94px;
@@ -71,6 +77,9 @@ button {
 }
 
 /* Header style */
+.container.head_line {
+  border-bottom: 1px solid #ececec;
+}
 .logo {
   text-decoration: none;
   color: var(--main-logo-color);
@@ -156,13 +165,13 @@ button {
 /* Section Banner */
 .banner {
   background-color: var(--footer-bg-color);
+  text-align: center;
 }
 
 .banner-tittle {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--baner-tittle-color);
@@ -175,10 +184,17 @@ button {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  text-align: center;
   letter-spacing: 0.06em;
   color: var(--baner-tittle-color);
   cursor: pointer;
+
+  padding-top: 10px;
+  padding-right: 32px;
+  padding-bottom: 10px;
+  padding-left: 32px;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
 
 .banner-btn:active {
@@ -196,6 +212,10 @@ button {
 }
 .pec_list .item {
   width: 270px;
+}
+
+.pec_list .item + .item {
+  margin-left: 30px;
 }
 
 .pec_list .tittle {
@@ -218,7 +238,7 @@ button {
 
 /* Section Our work */
 
-.our_work .tittle {
+.work_tittle {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -228,13 +248,22 @@ button {
   margin-bottom: 50px;
 }
 
-.our_work .list {
+.work_list {
+  display: flex;
+
   list-style: none;
   margin: 0;
   padding-left: 0;
 }
 
+.work_list .item + .item {
+  margin-left: 30px;
+}
+
 /* Our Team Section */
+.our_team {
+  background-color: var(--secondary-bg-color);
+}
 
 .our_team .tittle {
   font-weight: 700;
@@ -247,17 +276,40 @@ button {
 }
 
 .pers_cart {
+  display: flex;
+  text-align: center;
+
   list-style: none;
   margin: 0;
   padding-left: 0;
 }
 
+.pers_cart .item {
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.pers_cart .item + .item {
+  margin-left: 30px;
+}
+.pers_cart .photo {
+  margin-bottom: 30px;
+}
+
+.cart_text {
+  padding-top: 30px;
+  padding-right: auto;
+  padding-bottom: 30px;
+  padding-left: auto;
+}
 .pers_cart .name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
-  margin: 0;
+  margin-top: 0;
+  margin-bottom: 10px;
 }
 
 .pers_cart .prof {
@@ -297,7 +349,9 @@ button {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--white-color);
-  margin: 0;
+
+  margin-top: 0;
+  margin-bottom: 9px;
 }
 
 .address .link {
@@ -307,7 +361,9 @@ button {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--address-link-footer);
-  margin: 0;
+
+  margin-top: 0;
+  margin-bottom: 9px;
 }
 
 /* Portfolio style  */
@@ -335,6 +391,11 @@ button {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+
+  padding-top: 6px;
+  padding-right: 22px;
+  padding-bottom: 6px;
+  padding-left: 22px;
 }
 
 .pf_filter .btn:hover,
@@ -348,20 +409,16 @@ button {
   flex-wrap: wrap;
 
   list-style: none;
-  margin-top: 0;
-  padding-left: 0;
+  margin: -15px;
+  padding: 0;
 }
 
 .pf_cart {
+  width: 370px;
+  border: 1px solid var(--pf-cart-border-color);
+  box-sizing: border-box;
   text-align: center;
-}
-
-.pf_cart:nth-last-child(3n) {
-  margin-right: 30px;
-}
-
-.pf_cart:nth-last-child(-n + 3) {
-  margin-bottom: 30px;
+  margin: 15px;
 }
 
 .pf_cart .link {
