--- a/css/styles.css
+++ b/css/styles.css
@@ -188,7 +188,7 @@ img {
   padding-top: 200px;
   padding-bottom: 200px;
 
-  min-width: 1600px;
+  max-width: 1600px;
   height: 600px;
   margin-left: auto;
   margin-right: auto;
@@ -251,11 +251,14 @@ img {
 }
 
 .pec_box {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   width: 270px;
   height: 120px;
   margin-bottom: 30px;
-  padding: 25px 100px;
+
   background-color: var(--secondary-bg-color);
   border-radius: 4px;
 }
@@ -369,8 +372,12 @@ img {
 
 .pers_sociallink {
   display: flex;
-  margin: 0;
   align-items: center;
+  justify-content: center;
+
+  margin: 0;
+  padding-left: 0;
+  list-style: none;
 }
 .sociallink {
   width: 44px;
@@ -407,6 +414,8 @@ img {
 
 .client_list {
   display: flex;
+  margin: 0;
+  padding-left: 0;
 }
 .client_list .client_item + .client_item {
   margin-left: 30px;
@@ -414,6 +423,7 @@ img {
 .client_item {
   display: flex;
   align-items: center;
+  justify-content: center;
 
   width: 170px;
   height: 92px;
@@ -422,8 +432,6 @@ img {
   border-radius: 4px;
 }
 .client_link {
-  margin: auto;
-  padding: auto;
   color: #afb1b8;
 }
 .client_icon {
@@ -446,6 +454,7 @@ img {
 
 .footer_box {
   display: flex;
+  align-items: baseline;
 }
 
 .logo_footer {
@@ -496,12 +505,15 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--white-color);
+  margin-top: 0;
+  margin-bottom: 20px;
 }
 .ftr_soclist {
   display: flex;
   text-align: center;
   list-style: none;
   padding-left: 0;
+  margin: 0;
 }
 
 .ftr_item {
@@ -520,7 +532,7 @@ img {
   fill: currentColor;
 }
 
-.ftr_item:not(lastchild) {
+.ftr_item:not(:last-child) {
   margin-right: 10px;
 }
 
@@ -616,7 +628,7 @@ img {
   margin-bottom: 0;
 }
 
-.pf_cart:hover {
+.pf_link:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
