--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,8 @@ img {
 }
 
 .header_nav .link {
+  position: relative;
+
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -119,6 +121,23 @@ img {
   letter-spacing: 0.02em;
 
   color: var(--title-text-color);
+}
+
+.liner::after {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  content: '';
+
+  display: block;
+  width: 100%;
+  height: 5px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+}
+
+.header_nav .link:hover::after {
 }
 
 .header_nav .item + .item {
@@ -158,6 +177,8 @@ img {
   letter-spacing: 0.02em;
 
   color: var(--main-text-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact_list .link:hover,
@@ -168,6 +189,8 @@ img {
 .icon-mail {
   margin-right: 10px;
   fill: currentColor;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-mail:hover,
@@ -390,6 +413,9 @@ img {
   width: 44px;
   height: 44px;
   border-radius: 50%;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .pers_sociallink .sociallink + .sociallink {
   margin-left: 10px;
@@ -434,6 +460,8 @@ img {
   border: 1px solid;
   border-color: #afb1b8;
   border-radius: 4px;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client_link {
   display: flex;
@@ -443,6 +471,8 @@ img {
   width: 170px;
   height: 92px;
   color: #afb1b8;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client_icon {
   fill: currentColor;
@@ -541,6 +571,8 @@ img {
   border-radius: 50%;
   padding: 12px;
   background-color: rgba(255, 255, 255, 0.1);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .ftr_sociallink {
@@ -590,6 +622,9 @@ img {
   padding-right: 22px;
   padding-bottom: 6px;
   padding-left: 22px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .pf_filter .btn:hover,
@@ -614,6 +649,27 @@ img {
   margin: 15px;
 }
 
+.product_thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.product_thumb::after {
+  display: inline-block;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 150, 243, 0.9);
+
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.pf_cart:hover .product_thumb::after {
+  transform: translateY(0);
+}
 .cart_text {
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
@@ -649,6 +705,8 @@ img {
 
 .pf_link {
   display: block;
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .pf_link:hover,
