--- a/css/styles.css
+++ b/css/styles.css
@@ -654,9 +654,7 @@ img {
   overflow: hidden;
 }
 
-.product_thumb::after {
-  display: inline-block;
-  content: '';
+.product_overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -667,7 +665,7 @@ img {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.pf_cart:hover .product_thumb::after {
+.pf_cart:hover .product_overlay {
   transform: translateY(0);
 }
 .cart_text {
