--- a/css/styles.css
+++ b/css/styles.css
@@ -335,6 +335,36 @@ img {
   margin-left: 30px;
 }
 
+.work_box {
+  position: relative;
+  width: 370px;
+  height: 294px;
+}
+
+.box_label {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  height: 70px;
+  background: rgba(47, 48, 58, 0.8);
+}
+
+.box_label .text {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin: 0;
+
+  color: #ffffff;
+}
 /* -------------Our Team Section-------------- */
 .our_team {
   background-color: var(--secondary-bg-color);
@@ -487,7 +517,43 @@ img {
 .client_link:focus {
   color: var(--accent-color);
 }
+/* -------------- Backdrop--------------- */
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+
+  opacity: 1;
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.9);
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+
+  width: 528px;
+  height: 581px;
+  padding: 15px;
+
+  background-color: var(--white-color);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 /* -------------Footer style------------- */
 
 .footer {
@@ -658,12 +724,29 @@ img {
   position: absolute;
   top: 0;
   left: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
   background: rgba(33, 150, 243, 0.9);
 
+  padding-left: 24px;
+  padding-right: 24px;
+
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.product_overlay .text {
+  margin: 0;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1, 56;
+  letter-spacing: 0.03em;
+
+  color: var(--white-color);
 }
 .pf_cart:hover .product_overlay {
   transform: translateY(0);
