--- a/css/styles.css
+++ b/css/styles.css
@@ -108,8 +108,6 @@ img {
 }
 
 .header_nav .link {
-  position: relative;
-
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -121,12 +119,14 @@ img {
   letter-spacing: 0.02em;
 
   color: var(--title-text-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .liner::after {
-  position: absolute;
+  position: relative;
   left: 0;
-  bottom: 0;
+  top: 33px;
 
   content: '';
 
@@ -135,9 +135,6 @@ img {
   height: 5px;
   background-color: var(--accent-color);
   border-radius: 2px;
-}
-
-.header_nav .link:hover::after {
 }
 
 .header_nav .item + .item {
@@ -414,8 +411,6 @@ img {
   margin-bottom: 10px;
 }
 
-.prof {
-}
 .pers_cart .prof {
   font-size: 16px;
   line-height: 1.18;
@@ -444,8 +439,7 @@ img {
   height: 44px;
   border-radius: 50%;
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .pers_sociallink .sociallink + .sociallink {
   margin-left: 10px;
@@ -526,10 +520,10 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-
+  z-index: 1;
   opacity: 1;
-
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -538,7 +532,7 @@ img {
   visibility: hidden;
 }
 .backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.9);
+  transform: translate(-50%, -50%) scale(0.5);
 }
 .modal {
   position: absolute;
@@ -553,6 +547,21 @@ img {
   background-color: var(--white-color);
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn-close {
+  position: fixed;
+  right: 8px;
+  top: 8px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 30px;
+  height: 30px;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
 }
 /* -------------Footer style------------- */
 
@@ -743,7 +752,7 @@ img {
   margin: 0;
   font-weight: 400;
   font-size: 18px;
-  line-height: 1, 56;
+  line-height: 1.56;
   letter-spacing: 0.03em;
 
   color: var(--white-color);
