--- a/css/styles.css
+++ b/css/styles.css
@@ -438,8 +438,9 @@ img {
   width: 44px;
   height: 44px;
   border-radius: 50%;
+  color: #afb1b8;
 
-  transition: background-color 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .pers_sociallink .sociallink + .sociallink {
   margin-left: 10px;
@@ -449,7 +450,9 @@ img {
   background-color: var(--accent-color);
 }
 .icon-social {
-  fill: #afb1b8;
+  fill: currentColor;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .sociallink:hover .icon-social,
 .sociallink:focus .icon-social {
