--- a/css/styles.css
+++ b/css/styles.css
@@ -544,8 +544,7 @@ img {
   transform: translate(-50%, -50%) scale(1);
 
   width: 528px;
-  height: 581px;
-  padding: 15px;
+  padding: 40px;
 
   background-color: var(--white-color);
 
@@ -565,6 +564,147 @@ img {
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
+  color: #000000;
+
+  transform: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn-close:hover {
+  color: var(--accent-color);
+}
+.icon-close {
+  fill: currentColor;
+}
+.modal_tittle {
+  margin-top: 0;
+  margin-bottom: 12px;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--title-text-color);
+}
+
+.order_form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form_input input {
+  width: 100%;
+  height: 40px;
+
+  margin-top: 4px;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  padding-left: 42px;
+
+  border: 1px solid;
+  border-color: rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  transform: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form_comment textarea {
+  width: 100%;
+
+  margin-top: 4px;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  padding-left: 12px;
+
+  border: 1px solid;
+  border-color: rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  transform: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form_input {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  margin-bottom: 10px;
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+
+  letter-spacing: 0.01em;
+
+  color: var(--main-text-color);
+}
+.form-icon {
+  position: absolute;
+
+  top: 50%;
+  left: 12px;
+
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+
+  color: #000000;
+
+  transform: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form_input:hover .form-icon {
+  fill: var(--accent-color);
+}
+
+.form_input:hover input,
+.form_comment:hover textarea {
+  border-color: var(--accent-color);
+}
+
+.form_comment {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  margin-bottom: 20px;
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+
+  letter-spacing: 0.01em;
+
+  color: var(--main-text-color);
+}
+.order_checkbox {
+  margin-bottom: 30px;
+
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+
+  letter-spacing: 0.03em;
+
+  color: var(--main-text-color);
+}
+
+.order_btn {
+  width: 200px;
+  height: 50px;
+  padding: 10px 55px;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  background-color: var(--btn-click-color);
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+
+  color: var(--white-color);
 }
 /* -------------Footer style------------- */
 
