--- a/css/styles.css
+++ b/css/styles.css
@@ -591,39 +591,7 @@ img {
   display: flex;
   flex-direction: column;
 }
-
-.form_input input {
-  width: 100%;
-  height: 40px;
-
-  margin-top: 4px;
-  padding-top: 11px;
-  padding-bottom: 11px;
-  padding-left: 42px;
-
-  border: 1px solid;
-  border-color: rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-
-  transform: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form_comment textarea {
-  width: 100%;
-
-  margin-top: 4px;
-  padding-top: 11px;
-  padding-bottom: 11px;
-  padding-left: 12px;
-
-  border: 1px solid;
-  border-color: rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-
-  transform: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form_input {
+.box_input {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -639,6 +607,37 @@ img {
 
   color: var(--main-text-color);
 }
+.form_input {
+  width: 100%;
+  height: 40px;
+
+  margin-top: 4px;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  padding-left: 42px;
+
+  border: 1px solid;
+  border-color: rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  transform: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form_comment {
+  width: 100%;
+
+  margin-top: 4px;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  padding-left: 12px;
+
+  border: 1px solid;
+  border-color: rgb(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  transform: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .form-icon {
   position: absolute;
 
@@ -649,35 +648,19 @@ img {
   width: 18px;
   height: 18px;
 
-  color: #000000;
+  fill: #000000;
 
-  transform: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form_input:hover .form-icon {
+.form_input:focus ~ .form-icon {
   fill: var(--accent-color);
 }
 
-.form_input:hover input,
-.form_comment:hover textarea {
+.form_input:focus {
   border-color: var(--accent-color);
 }
 
-.form_comment {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-
-  margin-bottom: 20px;
-
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16;
-
-  letter-spacing: 0.01em;
-
-  color: var(--main-text-color);
-}
 .order_checkbox {
   margin-bottom: 30px;
 
@@ -809,6 +792,48 @@ img {
 .ftr_item:focus {
   background-color: var(--accent-color);
 }
+
+.ftr_inmail {
+  margin-left: 93px;
+}
+.ftr_form {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+.ftr_input {
+  width: 358px;
+  padding: 15px 16px;
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+
+.ftr_inpbtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 12px;
+  padding: 10px 29px;
+
+  background: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+}
+
+.ftr_btnsend {
+  margin-left: 10px;
+  width: 24px;
+  height: 24px;
+}
+
 /* -------------------Portfolio style --------------------- */
 
 .pf_filter {
