--- a/css/styles.css
+++ b/css/styles.css
@@ -619,6 +619,7 @@ img {
   border: 1px solid;
   border-color: rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  outline: 0;
 
   transform: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -634,6 +635,7 @@ img {
   border: 1px solid;
   border-color: rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  outline: 0;
 
   transform: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -654,9 +656,16 @@ img {
 .form_input:focus ~ .form-icon {
   fill: var(--accent-color);
 }
+.form_input:hover ~ .form-icon {
+  fill: var(--accent-color);
+}
 
 .form_input:focus,
 .form_comment:focus {
+  border-color: var(--main-logo-color);
+}
+.form_input:hover,
+.form_comment:hover {
   border-color: var(--main-logo-color);
 }
 
