--- a/css/styles.css
+++ b/css/styles.css
@@ -564,16 +564,17 @@ img {
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  color: #000000;
-
-  transform: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.btn-close:hover {
-  color: var(--accent-color);
 }
 .icon-close {
   fill: currentColor;
+
+  transform: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.btn-close:hover .icon-close {
+  fill: var(--accent-color);
+}
+
 .modal_tittle {
   margin-top: 0;
   margin-bottom: 12px;
@@ -636,6 +637,7 @@ img {
   border-color: rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   outline: 0;
+  resize: none;
 
   transform: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -707,13 +709,14 @@ img {
 .inp_checkbox:checked ~ .icon_checkbox {
   border-color: var(--accent-color);
   background-color: var(--accent-color);
-  background-image: url(/images/icon_check.svg);
+  background-image: url(./images/icon_check.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-origin: border-box;
 }
 .order_check .link {
   margin-left: 5px;
+  color: var(--accent-color);
 }
 
 .order_btn {
