--- a/css/styles.css
+++ b/css/styles.css
@@ -709,7 +709,7 @@ img {
 .inp_checkbox:checked ~ .icon_checkbox {
   border-color: var(--accent-color);
   background-color: var(--accent-color);
-  background-image: url(./images/icon_check.svg);
+  background-image: url(/images/icon_check.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-origin: border-box;
@@ -723,7 +723,8 @@ img {
   width: 200px;
   height: 50px;
   padding: 10px 55px;
-
+  margin-left: auto;
+  margin-right: auto;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   background-color: var(--btn-click-color);
