--- a/css/styles.css
+++ b/css/styles.css
@@ -76,8 +76,35 @@ img {
   padding-bottom: 94px;
 }
 
+.tittle {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+}
+
+.button {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: var(--white-color);
+}
+
+.text {
+  margin: 0;
+
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  color: var(--main-text-color);
+}
+
 /*------------- Header style------------- */
-.site_header {
+.site-header {
   border-bottom: 1px solid #ececec;
 }
 .logo {
@@ -100,18 +127,23 @@ img {
   align-items: center;
 }
 
-.header_nav {
+.header-nav {
   display: flex;
   list-style: none;
   margin: 0;
   padding-left: 0;
 }
 
-.header_nav .link {
+.header-nav__item {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
+}
+.header-nav__item:not(:first-child) {
+  margin-left: 50px;
+}
 
+.header-nav__link {
   text-decoration: none;
   font-weight: 500;
   font-size: 14px;
@@ -123,7 +155,10 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.liner::after {
+.header-nav__link--active {
+  color: var(--accent-color);
+}
+.header-nav__link--active::after {
   position: relative;
   left: 0;
   top: 33px;
@@ -136,37 +171,28 @@ img {
   background-color: var(--accent-color);
   border-radius: 2px;
 }
-
-.header_nav .item + .item {
-  margin-left: 50px;
-}
-
-.link.accent_nav {
+.header-nav__link:hover,
+.header-nav__link:focus {
   color: var(--accent-color);
 }
 
-.header_nav .link:hover,
-.header_nav .link:focus {
-  color: var(--accent-color);
-}
-
-.contact_list {
+.contact-list {
   display: flex;
   list-style: none;
   margin: 0 0 0 auto;
   padding-left: 0;
 }
-
-.contact_list .item + .item {
-  margin-left: 50px;
-}
-
-.contact_list .link {
+.contact-list__item {
   display: inline-flex;
   align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
+}
+.contact-list__item:not(:first-child) {
+  margin-left: 50px;
+}
 
+.contact-list__link {
   text-decoration: none;
   font-weight: 500;
   font-size: 14px;
@@ -178,31 +204,27 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact_list .link:hover,
-.contact_list .link:focus {
+.contact_list__link:hover,
+.contact_list__link:focus {
   color: var(--accent-color);
 }
 
-.icon-mail {
+.contact_list__icon {
   margin-right: 10px;
   fill: currentColor;
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-mail:hover,
-.icon-mail:focus {
+.contact_list__icon:hover,
+.contact_list__icon:focus {
   fill: currentColor;
 }
 
-.icon-phone {
-  margin-right: 10px;
-  fill: currentColor;
-}
 /*------------- Main style -------------*/
 
 /* -------------Section Banner------------- */
-.banner {
+.section-banner {
   background-color: var(--footer-bg-color);
   text-align: center;
   padding-top: 200px;
@@ -216,34 +238,28 @@ img {
     url(../images/banner.jpg);
   background-repeat: no-repeat;
 }
-
-.banner-tittle {
+.banner {
+  margin-bottom: 30px;
+  margin-top: 0;
+}
+.banner__tittle {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--baner-tittle-color);
-  margin-bottom: 30px;
-  margin-top: 0;
 }
 
 .banner-btn {
   background-color: var(--accent-color);
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
+
   color: var(--baner-tittle-color);
-  cursor: pointer;
 
   padding-top: 10px;
   padding-right: 32px;
   padding-bottom: 10px;
   padding-left: 32px;
-
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
 }
 
 .banner-btn:active {
@@ -255,22 +271,22 @@ img {
 .peculiar {
   padding-bottom: 0;
 }
-.pec_list {
+.pec-post {
   display: flex;
 
   list-style: none;
   margin: 0;
   padding-left: 0;
 }
-.pec_list .item {
+.pec-post__item {
   width: 270px;
 }
 
-.pec_list .item + .item {
+.pec-post__item:not(:first-child) {
   margin-left: 30px;
 }
 
-.pec_box {
+.pec-box {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -282,63 +298,51 @@ img {
   background-color: var(--secondary-bg-color);
   border-radius: 4px;
 }
-.pec_icon {
+.pec-box__icon {
   width: 70px;
   height: 70px;
 }
-.pec_box.antenna {
-  background-image: url(../images/antenna.svg);
-}
 
-.pec_list .tittle {
-  font-weight: 700;
+.pec-post__tittle {
   font-size: 14px;
-  line-height: 1.15;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-top: 0px;
   margin-bottom: 10px;
 }
 
-.pec_list .text {
-  font-size: 14px;
+.pec-post__text {
   line-height: 1.7;
-  letter-spacing: 0.03em;
-  color: var(--main-text-color);
+
   margin: 0;
 }
 
 /*------------- Section Our work -------------*/
 
-.work_tittle {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
+.work__tittle {
   text-align: center;
-  letter-spacing: 0.03em;
   margin-top: 0;
   margin-bottom: 50px;
 }
 
-.work_list {
+.work {
   display: flex;
-
   list-style: none;
   margin: 0;
   padding-left: 0;
 }
 
-.work_list .item + .item {
+.work__item:not(:first-child) {
   margin-left: 30px;
 }
 
-.work_box {
+.work-box {
   position: relative;
   width: 370px;
   height: 294px;
 }
 
-.box_label {
+.box-label {
   position: absolute;
   left: 0;
   bottom: 0;
@@ -352,32 +356,23 @@ img {
   background: rgba(47, 48, 58, 0.8);
 }
 
-.box_label .text {
+.box-label__text {
   font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
   text-transform: uppercase;
-  margin: 0;
-
-  color: #ffffff;
+  color: var(--white-color);
 }
 /* -------------Our Team Section-------------- */
-.our_team {
+.our-team {
   background-color: var(--secondary-bg-color);
 }
 
-.our_team .tittle {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
+.our-team__tittle {
   text-align: center;
-  letter-spacing: 0.03em;
   margin-top: 0;
   margin-bottom: 50px;
 }
 
-.pers_cart {
+.pers-cart {
   display: flex;
   text-align: center;
 
@@ -386,42 +381,41 @@ img {
   padding-left: 0;
 }
 
-.pers_cart .item {
+.pers-cart__item {
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-.pers_cart .item + .item {
+.pers-cart__item:not(:first-child) {
   margin-left: 30px;
 }
-.pers_cart .photo {
-}
 
-.pers_cart .cart_text {
+.pers-label {
   padding-top: 30px;
   padding-bottom: 30px;
+  padding-right: 24px;
+  padding-left: 24px;
 }
-.pers_cart .name {
+.pers-label__name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
-  letter-spacing: 0.03em;
+
   margin-top: 0;
   margin-bottom: 10px;
 }
 
-.pers_cart .prof {
+.pers-label__prof {
   font-size: 16px;
   line-height: 1.18;
-  letter-spacing: 0.03em;
 
   margin-top: 0;
   margin-bottom: 16px;
   color: var(--main-text-color);
 }
 
-.pers_sociallink {
+.pers-social {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -430,7 +424,7 @@ img {
   padding-left: 0;
   list-style: none;
 }
-.sociallink {
+.pers-social__link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -442,44 +436,40 @@ img {
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.pers_sociallink .sociallink + .sociallink {
+.pers-social__link:not(:first-child) {
   margin-left: 10px;
 }
-.sociallink:hover,
-.sociallink:focus {
+.pers-social__link:hover,
+.pers-social__link:focus {
   background-color: var(--accent-color);
 }
-.icon-social {
+.pers-social__icon {
   fill: currentColor;
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.sociallink:hover .icon-social,
-.sociallink:focus .icon-social {
+.pers-social__link:hover .pers-social__icon,
+.pers-social__link:focus .pers-social__icon {
   fill: #ffffff;
 }
 
 /* -----------Постоянные клиены ---------------*/
 
-.tittle.our_client {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
+.our-client__tittle {
   text-align: center;
-  letter-spacing: 0.03em;
   margin-top: 0;
   margin-bottom: 50px;
 }
 
-.client_list {
+.client-post {
   display: flex;
   margin: 0;
   padding-left: 0;
 }
-.client_list .client_item + .client_item {
+.client-post__item:not(:first-child) {
   margin-left: 30px;
 }
-.client_item {
+.client-post__item {
   display: flex;
 
   width: 170px;
@@ -490,7 +480,7 @@ img {
 
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.client_link {
+.client-post__link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -501,17 +491,17 @@ img {
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.client_icon {
+.client-post__icon {
   fill: currentColor;
 }
 
-.client_item:hover,
-.client_item:focus {
+.client-post__item:hover,
+.client-post__item:focus {
   border-color: var(--accent-color);
 }
 
-.client_link:hover,
-.client_link:focus {
+.client-post__link:hover,
+.client-post__link:focus {
   color: var(--accent-color);
 }
 /* -------------- Backdrop--------------- */
