--- a/sass/component/_banner.scss
+++ b/sass/component/_banner.scss
@@ -33,8 +33,12 @@
   padding-right: 32px;
   padding-bottom: 10px;
   padding-left: 32px;
+
+  &:active 
+    background-color: var(--btn-click-color);
+  
 }
 
-.banner__btn:active {
-  background-color: var(--btn-click-color);
-}
+// .banner__btn:active {
+//   background-color: var(--btn-click-color);
+// }
