--- a/sass/component/_footer.scss
+++ b/sass/component/_footer.scss
@@ -68,6 +68,10 @@ footer {
   background-color: rgba(255, 255, 255, 0.1);
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus 
+  background-color: var(--accent-color);
 }
 
 .footer-soclist__link {
@@ -82,10 +86,8 @@ footer {
   margin-right: 10px;
 }
 
-.footer-soclist__item:hover,
-.footer-soclist__item:focus {
-  background-color: var(--accent-color);
-}
+
+
 
 .footer-box__item--append {
   margin-left: 90px;
