--- a/sass/component/_header.scss
+++ b/sass/component/_header.scss
@@ -81,21 +81,23 @@
   color: var(--main-text-color);
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus 
+    color: var(--accent-color);
 }
 
-.contact-list__link:hover,
-.contact-list__link:focus {
-  color: var(--accent-color);
-}
 
 .contact_list__icon {
   margin-right: 10px;
   fill: currentColor;
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  
+  &:hover,
+  &:focus 
+    fill: currentColor;
+
 }
 
-.contact-list__icon:hover,
-.contact-list__icon:focus {
-  fill: currentColor;
-}
