--- a/sass/component/_modal.scss
+++ b/sass/component/_modal.scss
@@ -84,6 +84,14 @@
   outline: 0;
 
   transform: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:focus ~ .form-icon,
+  &:hover ~ .form-icon 
+    fill: var(--accent-color);
+  
+  &:focus,
+  &:hover
+    border-color: var(--main-logo-color);
 }
 
 .form_comment {
@@ -101,6 +109,10 @@
   resize: none;
 
   transform: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:focus,
+  &:hover 
+    border-color: var(--main-logo-color);
 }
 
 .form-icon {
@@ -114,22 +126,6 @@
   height: 18px;
 
   transform: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form_input:focus ~ .form-icon {
-  fill: var(--accent-color);
-}
-.form_input:hover ~ .form-icon {
-  fill: var(--accent-color);
-}
-
-.form_input:focus,
-.form_comment:focus {
-  border-color: var(--main-logo-color);
-}
-.form_input:hover,
-.form_comment:hover {
-  border-color: var(--main-logo-color);
 }
 
 .order_check {
@@ -154,6 +150,14 @@
   appearance: none;
 
   position: absolute;
+
+  &:checked ~ .icon_checkbox 
+    border-color: var(--accent-color);
+    background-color: var(--accent-color);
+    background-image: url(../images/icon_check.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-origin: border-box;
 }
 
 .icon_checkbox {
@@ -167,14 +171,7 @@
   border-radius: 4px;
 }
 
-.inp_checkbox:checked ~ .icon_checkbox {
-  border-color: var(--accent-color);
-  background-color: var(--accent-color);
-  background-image: url(../images/icon_check.svg);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-origin: border-box;
-}
+
 .order_check .link {
   margin-left: 5px;
   color: var(--accent-color);
