--- a/sass/component/_our-client.scss
+++ b/sass/component/_our-client.scss
@@ -22,6 +22,10 @@
   border-radius: 4px;
 
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus 
+    border-color: var(--accent-color);
 }
 .client-post__link {
   display: flex;
@@ -33,17 +37,17 @@
   color: #afb1b8;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus 
+    color: var(--accent-color);
 }
 .client-post__icon {
   fill: currentColor;
 }
 
-.client-post__item:hover,
-.client-post__item:focus {
-  border-color: var(--accent-color);
-}
 
-.client-post__link:hover,
-.client-post__link:focus {
-  color: var(--accent-color);
-}
+
+
+
+
