--- a/sass/component/_footer.scss
+++ b/sass/component/_footer.scss
@@ -70,8 +70,9 @@ footer {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
-  &:focus 
+  &:focus {
   background-color: var(--accent-color);
+  }
 }
 
 .footer-soclist__link {
