--- a/sass/component/_header.scss
+++ b/sass/component/_header.scss
@@ -83,10 +83,10 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
-  &:focus 
+  &:focus {
     color: var(--accent-color);
+  }
 }
-
 
 .contact_list__icon {
   margin-right: 10px;
@@ -94,10 +94,8 @@
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  
   &:hover,
-  &:focus 
+  &:focus {
     fill: currentColor;
-
+  }
 }
-
