--- a/sass/component/_our-client.scss
+++ b/sass/component/_our-client.scss
@@ -24,8 +24,9 @@
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
-  &:focus 
+  &:focus {
     border-color: var(--accent-color);
+  }
 }
 .client-post__link {
   display: flex;
@@ -39,8 +40,9 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
-  &:focus 
+  &:focus {
     color: var(--accent-color);
+  }
 }
 .client-post__icon {
   fill: currentColor;
