--- a/sass/component/_our-team.scss
+++ b/sass/component/_our-team.scss
@@ -73,22 +73,21 @@
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
-  &:focus 
+  &:focus {
     background-color: var(--accent-color);
-    
+  }
+
   &:hover .pers-social__icon,
-  &:focus .pers-social__icon 
+  &:focus .pers-social__icon {
     fill: #ffffff;
+  }
 }
 .pers-social__link--append {
   margin-left: 10px;
 }
-
 
 .pers-social__icon {
   fill: currentColor;
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-
