--- a/sass/component/_product-cart.scss
+++ b/sass/component/_product-cart.scss
@@ -11,8 +11,9 @@
   width: 370px;
   margin: 15px;
 
-  &:hover .product-cart__overlay 
+  &:hover .product-cart__overlay {
   transform: translateY(0);
+  }
 }
 
 .cart-header {
@@ -68,9 +69,10 @@
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
-  &:focus 
+  &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
 .cart-footer__name {
