Добавляет пременные шрифтов

--- a/sass/base/_body.scss
+++ b/sass/base/_body.scss
@@ -1,5 +1,5 @@
 .body {
   background-color: var(--main-bg-color);
   color: var(--title-text-color);
-  font-family: 'Roboto', ssans-serif;
+  font-family: $basic-font;
 }
