--- a/sass/component/_logo.scss
+++ b/sass/component/_logo.scss
@@ -1,7 +1,7 @@
 .logo {
   text-decoration: none;
   color: var(--main-logo-color);
-  font-family: 'Raleway', sans-serif;
+  font-family: $secondary-font;
   font-weight: bold;
   font-size: 26px;
   line-height: 1.2;
