--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,14 +6,15 @@
 @import './base/body';
 @import './base/section';
 @import './base/container';
-@import './base/tittle';
-@import './base/text';
-@import './base/button';
 @import './base/list';
-@import './base/backdrop';
-@import './base/modal';
-@import './base/logo';
+
 //Bloks
+@import './component/tittle';
+@import './component/text';
+@import './component/backdrop';
+@import './component/modal';
+@import './component/logo';
+@import './component/button';
 @import './component/header';
 @import './component/banner';
 @import './component/peculiar';
